align fix

--- a/src/app/stepper/stepper.component.scss
+++ b/src/app/stepper/stepper.component.scss
@@ -80,6 +80,7 @@
       font-weight: bold;
       font-size: 14px;
       line-height: 17px;
+      text-align: center;
     }
 
     .active, .pending {
